Fine tune dialog height Add  specific class to body stack to prevent css from influencing too much

--- a/src/Core/Components/Dialog/FluentDialog.razor.css
+++ b/src/Core/Components/Dialog/FluentDialog.razor.css
@@ -1,12 +1,9 @@
 ﻿fluent-dialog::part(control) {
     --dialog-padding: calc(var(--design-unit) * 6 * 1px);
     position: relative;
-    padding: 0px var(--dialog-padding);
+    padding: var(--dialog-padding);
     width: calc(var(--dialog-width) - 2 * var(--dialog-padding));
-}
-
-fluent-dialog.autoheight::part(control) {
-    height: auto;
+    height: calc(var(--dialog-height) - 2 * var(--dialog-padding));
 }
 
 fluent-dialog:has(div[class~="fluent-dialog-body"]):not(:is(fluent-dialog[class~="right"], fluent-dialog[class~="left"]) )::part(control) {
@@ -46,16 +43,13 @@ fluent-dialog[class~="left"]::part(control) {
 
 fluent-dialog ::deep .fluent-dialog-header {
     grid-area: dialog-header;
-    padding: var(--dialog-padding) 0px;
-    width: 100%;
+    padding: 0 0 var(--dialog-padding) 0;
 }
 
 fluent-dialog ::deep .fluent-dialog-footer {
     grid-area: dialog-footer;
     margin-top: auto;
-    padding: var(--dialog-padding) 0px;
-    bottom: 0px;
-    width: calc(100% - var(--dialog-padding) * 1px);
+    padding: var(--dialog-padding) 0 0 0;
 }
 
 fluent-dialog:has(div[class~="fluent-dialog-body"]) ::deep .fluent-dialog-footer {
